// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-number #render clearable should render component as expected (1) 1`] = `"<gux-form-field-number lang="en" hydrated=""> <input slot="input" type="number" value="10" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-number>"`;

exports[`gux-form-field-number #render clearable should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-number #render clearable should render component as expected (2) 1`] = `"<gux-form-field-number lang="en" clearable="" hydrated=""> <input slot="input" type="number" value="10" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-number>"`;

exports[`gux-form-field-number #render clearable should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-clear gux-input-container">
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-number #render clearable should render component as expected (3) 1`] = `"<gux-form-field-number lang="en" clearable="true" hydrated=""> <input slot="input" type="number" value="10" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-number>"`;

exports[`gux-form-field-number #render clearable should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-clear gux-input-container">
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-number #render clearable should render component as expected (4) 1`] = `"<gux-form-field-number lang="en" clearable="false" hydrated=""> <input slot="input" type="number" value="10" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-number>"`;

exports[`gux-form-field-number #render clearable should render component as expected (4) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-number #render clearable should render component as expected (5) 1`] = `"<gux-form-field-number lang="en" clearable="" hydrated=""> <input slot="input" type="number" value="10" disabled="" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-number>"`;

exports[`gux-form-field-number #render clearable should render component as expected (5) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-disabled gux-input-container">
        <slot name="input"></slot>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" disabled="" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" disabled="" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-number #render help should render component as expected 1`] = `"<gux-form-field-number hydrated=""> <input slot="input" type="number" name="e-1" value="10" id="gux-form-field-input-i" aria-describedby="gux-form-field-help-i"> <label slot="label" for="gux-form-field-input-i">Default</label> <span slot="help" id="gux-form-field-help-i">This is a help message</span> </gux-form-field-number>"`;

exports[`gux-form-field-number #render help should render component as expected 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help gux-show">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-number #render input attributes should render component as expected (1) 1`] = `"<gux-form-field-number lang="en" hydrated=""> <input slot="input" type="number" value="10" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-number>"`;

exports[`gux-form-field-number #render input attributes should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-number #render input attributes should render component as expected (2) 1`] = `"<gux-form-field-number lang="en" hydrated=""> <input slot="input" type="number" value="10" disabled="" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-number>"`;

exports[`gux-form-field-number #render input attributes should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-disabled gux-input-container">
        <slot name="input"></slot>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" disabled="" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" disabled="" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-number #render input attributes should render component as expected (3) 1`] = `"<gux-form-field-number lang="en" hydrated=""> <input slot="input" type="number" value="10" required="" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-number>"`;

exports[`gux-form-field-number #render input attributes should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label gux-required">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-number #render label-position should render component as expected (1) 1`] = `"<gux-form-field-number lang="en" hydrated=""> <input slot="input" type="number" value="10" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-number>"`;

exports[`gux-form-field-number #render label-position should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-number #render label-position should render component as expected (2) 1`] = `"<gux-form-field-number lang="en" label-position="above" hydrated=""> <input slot="input" type="number" value="10" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-number>"`;

exports[`gux-form-field-number #render label-position should render component as expected (2) 2`] = `
<div class="gux-above gux-form-field-container">
  <div class="gux-above gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-number #render label-position should render component as expected (3) 1`] = `"<gux-form-field-number lang="en" label-position="beside" hydrated=""> <input slot="input" type="number" value="10" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-number>"`;

exports[`gux-form-field-number #render label-position should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-number #render label-position should render component as expected (4) 1`] = `"<gux-form-field-number lang="en" label-position="screenreader" hydrated=""> <input slot="input" type="number" value="10" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-number>"`;

exports[`gux-form-field-number #render label-position should render component as expected (4) 2`] = `
<div class="gux-form-field-container gux-screenreader">
  <div class="gux-form-field-label gux-screenreader">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input" part="input-section">
      <div class="gux-input-container">
        <slot name="input"></slot>
      </div>
      <div class="gux-step-buttons-container">
        <button class="gux-step-button" tabindex="-1" title="Increment" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-up-small-regular" size="inherit"></gux-icon>
        </button>
        <button class="gux-step-button" tabindex="-1" title="Decrement" type="button">
          <gux-icon hydrated="" icon-name="custom/chevron-down-small-regular" size="inherit"></gux-icon>
        </button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-regular" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;
